tạo database ren code từ database

--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectedDb": "Data Source=_ManhHung;Initial Catalog=ShoppingCart;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
