--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectedDb": "Data Source=_ManhHung;Initial Catalog=ShoppingCart;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Server=26.212.253.31,1433;Database=ShoppingCart;User Id=account1;Password=123;",
+    "DbConnectedDb": "Data Source=26.212.253.31,1433;Initial Catalog=ShoppingCart;Persist Security Info=True;User ID=account1;Password=123;Trust Server Certificate=True"
   }
 }
