--- a/Shopping/Shopping.csproj
+++ b/Shopping/Shopping.csproj
@@ -15,6 +15,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs" Version="9.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
 
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
