--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectedDb": "Data Source=_manhhung;Initial Catalog=ShoppingCart;Integrated Security=True;Trust Server Certificate=True"
+    "DbConnectedDb": "Data Source=_manhhung;Initial Catalog=ShoppingCart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
