trang 404 not found

--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectedDb": "Data Source=_manhhung;Initial Catalog=ShoppingCart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+
+    "DefaultConnection": "Server=26.212.253.31,1433;Database=ShoppingCart;User Id=hieuhieu;Password=123;",
+    "DbConnectedDb": "Data Source=26.212.253.31,1433;Initial Catalog=ShoppingCart;User ID=hieuhieu;Password=123;Trust Server Certificate=True"
   }
 }
