--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleKeys": {
+    "ClientId": "792283903884-drhln29gjdhoeecakrl8epflv8n8tu06.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
