--- a/Shopping/Shopping.csproj
+++ b/Shopping/Shopping.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="9.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
 
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
