--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "GoogleKeys": {
-    "ClientId": "792283903884-drhln29gjdhoeecakrl8epflv8n8tu06.apps.googleusercontent.com",
-    "ClientSecret": "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"
+    "ClientId": "KEY",
+    "ClientSecret": "Key"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
