thanh toan momo

--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -9,6 +9,15 @@
     "ClientId": "792283903884-drhln29gjdhoeecakrl8epflv8n8tu06.apps.googleusercontent.com",
     "ClientSecret": "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"
   },
+  "MomoAPI": {
+    "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+    "AccessKey": "F8BBA842ECF85",
+    "ReturnUrl": "https://localhost:5032/Checkout/PaymentCallBack",
+    "NotifyUrl": "https://localhost:50322/Checkout/MomoNotify",
+    "PartnerCode": "MOMO",
+    "RequestType": "captureMoMoWallet"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
