--- a/Shopping/Shopping.csproj
+++ b/Shopping/Shopping.csproj
@@ -44,6 +44,8 @@
 
     <PackageReference Include="RestSharp" Version="112.1.0" />
 
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
+
   </ItemGroup>
 
 
