Optimize website UI/UX: Modern header, login/signup pages, product cards, cart design and admin panel improvements

--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -14,14 +14,12 @@
     "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
     "AccessKey": "F8BBA842ECF85",
     "ReturnUrl": "https://localhost:5032/Checkout/PaymentCallBack",
-    "NotifyUrl": "https://localhost:50322/Checkout/MomoNotify",
+    "NotifyUrl": "https://localhost:5032/Checkout/MomoNotify",
     "PartnerCode": "MOMO",
     "RequestType": "captureMoMoWallet"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-
-
-    "DbConnectedDb": "Data Source=_manhhung;Initial Catalog=ShoppingCart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DbConnectedDb": "Data Source=LAPTOP-RMUN84K9\\MANHHUNG;Initial Catalog=ShoppingCart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
