Add AI Chatbot with Gemini API integration - Product search assistant - Floating purple gradient UI - Real-time API communication

--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -9,6 +9,9 @@
     "ClientId": "792283903884-drhln29gjdhoeecakrl8epflv8n8tu06.apps.googleusercontent.com",
     "ClientSecret": "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"
   },
+  "Gemini": {
+    "ApiKey": "AIzaSyAc1pTY6dSGulT4q7u57pU-Wug3R5D1b1c"
+  },
   "MomoAPI": {
     "MomoApiUrl":"https://test-payment.momo.vn/gw_payment/transactionProcessor",
     "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
