--- a/Shopping/Shopping.csproj
+++ b/Shopping/Shopping.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="9.1.0" />
+    <PackageReference Include="Google.Cloud.AIPlatform.V1" Version="2.31.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
 
@@ -43,6 +44,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 
     <PackageReference Include="RestSharp" Version="112.1.0" />
+
+    <PackageReference Include="System.Net.Http.Json" Version="10.0.0" />
 
     <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
 
