Add smartphone support to chatbot

--- a/Shopping/appsettings.Development.json
+++ b/Shopping/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Groq": {
+    "ApiKey": "YOUR_GROQ_API_KEY",
+    "Model": "llama-3.3-70b-versatile"
   }
 }
