--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -10,10 +10,14 @@
     "ClientSecret": "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"
   },
   "Gemini": {
-    "ApiKey": "AIzaSyAc1pTY6dSGulT4q7u57pU-Wug3R5D1b1c"
+    "ApiKey": "YOUR_GEMINI_API_KEY"
+  },
+  "Groq": {
+    "ApiKey": "YOUR_GROQ_API_KEY",
+    "Model": "llama-3.3-70b-versatile"
   },
   "MomoAPI": {
-    "MomoApiUrl":"https://test-payment.momo.vn/gw_payment/transactionProcessor",
+    "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
     "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
     "AccessKey": "F8BBA842ECF85",
     "ReturnUrl": "https://localhost:5032/Checkout/PaymentCallBack",
