- Cài đặt DotNetEnv package để đọc file .env - Tạo file .env.example hướng dẫn cấu hình - Thêm .env vào .gitignore để bảo mật - Cập nhật Program.cs load biến môi trường - Xóa API keys khỏi appsettings.json - Cải thiện AI chatbot linh hoạt hơn - Cập nhật README với hướng dẫn .env

--- a/Shopping/appsettings.json
+++ b/Shopping/appsettings.json
@@ -6,20 +6,17 @@
     }
   },
   "GoogleKeys": {
-    "ClientId": "792283903884-drhln29gjdhoeecakrl8epflv8n8tu06.apps.googleusercontent.com",
-    "ClientSecret": "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"
-  },
-  "Gemini": {
-    "ApiKey": "YOUR_GEMINI_API_KEY"
+    "ClientId": "",
+    "ClientSecret": ""
   },
   "Groq": {
-    "ApiKey": "YOUR_GROQ_API_KEY",
+    "ApiKey": "",
     "Model": "llama-3.3-70b-versatile"
   },
   "MomoAPI": {
-    "MomoApiUrl": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
-    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
-    "AccessKey": "F8BBA842ECF85",
+    "MomoApiUrl": "",
+    "SecretKey": "",
+    "AccessKey": "",
     "ReturnUrl": "https://localhost:5032/Checkout/PaymentCallBack",
     "NotifyUrl": "https://localhost:5032/Checkout/MomoNotify",
     "PartnerCode": "MOMO",
@@ -27,6 +24,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectedDb": "Data Source=LAPTOP-RMUN84K9\\MANHHUNG;Initial Catalog=ShoppingCart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DbConnectedDb": ""
   }
 }
