--- a/Shopping/Shopping.csproj
+++ b/Shopping/Shopping.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="9.1.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Google.Cloud.AIPlatform.V1" Version="2.31.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.13" />
